sounds on tips wired up - working on private stream page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -72,6 +72,7 @@
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('7edtnke6nsra');
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0Ywcdqmucs7ISe3wn8Dy9kjQvfCoh5LM&libraries=places"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
     <!-- End of Async Drift Code -->
     <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
